# KSIP-ao

./: .gitignore  data_analizer.py  data_cleaner.py  pyproject.toml  rdf_reader.py  source_reader.py
txts/: 2014.txt  2015.txt  2019.txt  2020.txt
txts_readed/: 2009.txt  2010.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt
