[tool.poetry]
name = "egzaminao"
version = "0.1.0"
description = ""
authors = ["michalnaoko <michal.pycia@naokko.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.10.9"
numpy = "^1.23.3"
pandas = "^1.5.0"
pytesseract = "^0.3.10"
tesseract = "^0.1.3"
pdf2image = "^1.16.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
